--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "release": "gitbook install && gitbook build'"
   },
   "devDependencies": {
-    "gitbook-cli": "^2.3.2"
+    "gitbook-cli": "^2.3.2",
+    "prettier": "^1.18.2"
   },
   "license": "Creative Commons BY-SA",
   "dependencies": {
